assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap');


/* wildcard selector added to overide default browser settings - used from love running project*/
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* Game page */

#main-heading-one {
    display: flex;
    font-size: 12px;
    justify-content: center;
}

/* used https://cssgradient.io/ to create gradient background */
body {
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    background: #9800FF;
    background: linear-gradient(90deg, rgba(5,125,255,1) 0%, rgba(152,0,255,1) 42%);
}

/* starting images and scores */

#computer {
    display: flex;
    flex-direction: column;
    align-items: center;
}

#user {
    display: flex;
    flex-direction: column;
    align-items: center;
}

#rps-image-one {
    max-width: 65%;
    height: auto;
    border: 3px solid #000000;
    box-shadow: 3px 3px 3px #000000;
}

#rps-image-two {
    max-width: 65%;
    height: auto;
    border: 3px solid #000000;
    box-shadow: 3px 3px 3px #000000;
}

/* Button styles */

#the-game {
    display: flex;
    flex-direction: column;
    align-items: center;
}

#choices {
    display: flex;
    justify-content: space-evenly;
}

button {
    border: 2px solid #000000;
    border-radius: 4px;
}

button:hover {
    color: #000000;
}

.choice-btn {
    transition-duration: 0.4s;
    margin-right: 10px;
    font-family: "Josefin Sans", sans-serif;
    font-size: 1rem;
    text-align: center;
    padding: 5px;
    background-color: #00FFA5;
    font-weight: bold;

}

#game-buttons {
    display: flex;
    justify-content: space-around;
}

#choice-statement {
    display: flex;
    font-size: 1rem;
    font-family: "Josefin Sans", sans-serif;
    justify-content: center;
    margin-bottom: 10px;
}

.reset-btn {
    transition-duration: 0.4s;
    margin-top: 10px;
    display: flex;
    color: black;
    background-color: #FF1900;
    font-weight: bold;
    padding: 5px;
    margin-bottom: 5px;
    font-size: 1rem;
}

.home-btn {
    transition-duration: 0.4s;
    display: flex;
    color: black;
    background-color: #00DDFF;
    font-weight: bold;
    padding: 5px;
    font-size: 1rem;
    text-decoration: none;
    margin-top: 10px;
    height: fit-content;
}

/* game area */

#game-message {
    display: flex;
    justify-content: center;
    font-family: "Josefin Sans", sans-serif;
    margin-top: 30px;
    margin-left: 20px;
}

#current-score-computer {
    font-family: "Josefin Sans", sans-serif;
    margin-top: 20px;
}

#current-score-user {
    margin-bottom: 20px;
    font-family: "Josefin Sans", sans-serif;
}

/* footer */

footer {
    bottom: 0;
    font-family: "Josefin Sans", sans-serif;
    font-size: 1rem;
    background-color: black;
    color: azure;
    width: 100%;
    margin-top: auto;
    text-align: center;
    padding-top: 10px;
    min-height: 50px;
}


/* Media query: tablets and larger (768px and up) */
@media screen and (min-width: 768px) {
    #main-heading-one {
        display: flex;
        font-size: 25px;
        justify-content: center;
    }

    /* Button styles */

    #choices {
        display: flex;
        justify-content: space-evenly;
        margin-top: 30px;
    }

    .choice-btn {
        transition-duration: 0.4s;
        margin-right: 10px;
        font-family: "Josefin Sans", sans-serif;
        font-size: 2rem;
        text-align: center;
        padding: 5px 5px 5px 5px;
    }

    #game-buttons {
        display: flex;
        justify-content: space-around;
        margin-top: 20px;
    }

    #choice-statement {
        display: flex;
        font-size: 2rem;
        font-family: "Josefin Sans", sans-serif;
        justify-content: center;
        margin-bottom: 10px;
    }

    .reset-btn {
        transition-duration: 0.4s;
        display: flex;
        color: black;
        background-color: red;
        font-weight: bold;
        padding: 5px;
        font-size: 2rem;
    }

    .home-btn {
        transition-duration: 0.4s;
        display: flex;
        color: black;
        background-color: rgb(0, 174, 255);
        font-weight: bold;
        padding: 5px;
        font-size: 2rem;
        text-decoration: none;
        margin-top: 10px;
        height: fit-content;
    }

    /* starting images */

    #rps-image-one {
        max-width: 100%;
        height: auto;
        margin-top: 20px;
    }

    #rps-image-two {
        max-width: 1000%;
        height: auto;
        margin-bottom: 30px;
    }

    /* game area */

    #current-score-computer {
        display: flex;
        justify-content: center;
        flex-direction: column;
        padding-left: 70px;
        font-size: 30px;
        text-align: center;
        margin-right: 80px;
        margin-top: 20px;
    }

    #current-score-user {
        display: flex;
        justify-content: center;
        flex-direction: column;
        padding-left: 70px;
        font-size: 30px;
        text-align: center;
        margin-right: 80px;
        margin-bottom: 20px;
    }

    /* footer */

    footer {
        position: fixed;
        bottom: 0;
        font-family: "Josefin Sans", sans-serif;
        font-size: 23px;
        background-color: black;
        color: azure;
        width: 100%;
        margin-top: auto;
        text-align: center;
        padding-top: 16px;
        min-height: 60px;
    }


}

/* Media query: laptops and desktops (992px and up) */
@media screen and (min-width: 992px) {
    #main-heading-one {
        display: flex;
        font-size: 25px;
        justify-content: center;
    }

    /* Button styles */

    #choices {
        display: flex;
        justify-content: space-evenly;
        margin-top: 30px;
    }

    .choice-btn {
        transition-duration: 0.4s;
        margin-right: 10px;
        font-family: "Josefin Sans", sans-serif;
        font-size: 2rem;
        text-align: center;
        padding: 5px 5px 5px 5px;
    }

    #game-buttons {
        display: flex;
        justify-content: space-around;
        margin-top: 20px;
        margin-bottom: 20px;
    }

    #choice-statement {
        display: flex;
        font-size: 2rem;
        font-family: "Josefin Sans", sans-serif;
        justify-content: center;
        margin-bottom: 10px;
    }

    .reset-btn {
        transition-duration: 0.4s;
        display: flex;
        color: black;
        background-color: red;
        font-weight: bold;
        padding: 5px;
        font-size: 2rem;
    }

    .start-btn {
        transition-duration: 0.4s;
        display: flex;
        color: black;
        background-color: rgb(0, 174, 255);
        font-weight: bold;
        padding: 5px;
        font-size: 2rem;
    }

    /* footer */

    footer {
        position: relative;
        bottom: 0;
        font-family: "Josefin Sans", sans-serif;
        font-size: 23px;
        background-color: black;
        color: azure;
        width: 100%;
        margin-top: auto;
        text-align: center;
        padding-top: 16px;
        min-height: 60px;
    }

}


/* Landing page styles */


.lp-heading-main {
    display: flex;
    flex-direction: column;
    justify-content: center;
    margin-top: 8px;
}

#game-start {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 220px;
}

#lp-heading {
    display: flex;
    justify-content: center;
    font-family: "Josefin Sans", sans-serif;
    font-size: 10px;
}

#start-game-heading {
    font-family: "Josefin Sans", sans-serif;
    font-size: 1rem;
}


.start-button {
    transition-duration: 0.4s;
    display: flex;
    color: black;
    background-color: rgb(0, 174, 255);
    font-weight: bold;
    padding: 5px;
    font-size: 2rem;
}

.link-one {
    text-decoration: none;

}

.button-start {
    margin-top: 20px;
}

